--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,5 +185,16 @@ form {
 .show{
     width: 100% !important;
 }
-/* css phần header */
+
+
+.carousel-item {
+    height: 65vh;
+    min-height: 350px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 
